<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayoutStyle"
    android:id="@+id/playing_now"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <RelativeLayout
        style="@style/RelLayoutStyle">
        <TextView
            style="@style/ArtistNameTextView"
            android:id="@+id/artist_name_text_view"
            android:text="@string/artist_name1"/>
        <TextView
            style="@style/SongNameTextView"
            android:id="@+id/song_name_text_view"
            android:text="@string/song_name1"/>
       <TextView
           style="@style/TimeTextView"
           android:id="@+id/time_text_view"
           android:text="@string/song_time1"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/LinLayoutPlay">
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/pause_button"
            android:text="@string/pause"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/play_button"
            android:text="@string/play"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/stop_button"
            android:text="@string/stop"/>
    </LinearLayout>
</LinearLayout>